# gen_control

./: CMakeLists.txt  README.md
inc/: amplitude.h  answer_packet.h  command_packet.h  errors.h  gen.h  packet.h  packet_answer.h  packet_command.h  packet_request.h  request_packet.h  waveform.h
src/: amplitude.cpp  answer_packet.cpp  command_packet.cpp  gen.cpp  main.cpp  packet.cpp  packet_answer.cpp  packet_command.cpp  packet_request.cpp  request_packet.cpp  waveform.cpp  waveform.cpp.autosave
